File updated Date: 4-9-2024

--- a/Config.properties
+++ b/Config.properties
@@ -5,6 +5,6 @@ implicitWait=60
 webDriverWait=60
 username=admin
 password =admin
-#Url=http://localhost:8888/
+Url=http://localhost:8888/
 Login=//input[@name='Login']
-Url=https://dubaiexchange.in/
+#Url=https://dubaiexchange.in/
